custom system prompt and user prompt for each conversation type

--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -287,7 +287,7 @@
 	"Name": "Tên",
 	"Name Tag": "Tên Thẻ",
 	"Name your modelfile": "Đặt tên cho tệp mô hình của bạn",
-	"New Chat": "Tạo cuộc trò chuyện mới",
+	"New Chat": "Hội thoại mới",
 	"New Password": "Mật khẩu mới",
 	"No results found": "Không tìm thấy kết quả",
 	"No source available": "Không có nguồn",
@@ -499,5 +499,21 @@
 	"You're a helpful assistant.": "Bạn là một trợ lý hữu ích.",
 	"You're now logged in.": "Bạn đã đăng nhập.",
 	"Youtube": "",
-	"Youtube Loader Settings": "Cài đặt Youtube Loader"
+	"Youtube Loader Settings": "Cài đặt Youtube Loader",
+	"LUAT PHAP": "Hội thoại Luật Pháp",
+	"PHAT PHAP": "Hội thoại Phật Pháp",
+	"chat": "Hội thoại thông thường",
+	"chat_law": "Hội thoại Luật Pháp",
+	"chat_buddhism": "Hội thoại Phật Pháp",
+	"summary": "Tóm tắt đơn giản",
+	"summary_emphasis": "Tóm tắt có điểm nhấn",
+	"faq": "Tạo FAQ",
+	"faq_simple_analysis": "Phân tích đơn giản",
+	"faq_case_1": "Hỏi đáp về vụ án kiểu 1",
+	"faq_case_2": "Hỏi đáp về vụ án kiểu 2",
+	"faq_create_example": "Tạo đề thi",
+	"faq_create_verdict_scenario": "Tạo kịch bản bản án",
+	"translate": "Dịch",
+	"translate_coding": "Dịch có coding",
+	"translate_ancient": "Dịch cổ văn"
 }
