--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -46,7 +46,7 @@
 	"API RPM": "API RPM",
 	"April": "April",
 	"Archive": "",
-	"Archived Chats": "",
+	"Archived Chats": "Arkiverade chattar",
 	"are allowed - Activate this command by typing": "är tillåtna - Aktivera detta kommando genom att skriva",
 	"Are you sure?": "Är du säker?",
 	"Attach file": "Bifoga fil",
@@ -330,7 +330,7 @@
 	"Permission denied when accessing microphone: {{error}}": "Tillstånd nekades vid åtkomst till mikrofon: {{error}}",
 	"Personalization": "Personifiera",
 	"Plain text (.txt)": "Klartext (.txt)",
-	"Playground": "Lekplats",
+	"Playground": "Testyta",
 	"Positive attitude": "Positiv attityd",
 	"Previous 30 days": "Föregående 30 dagar",
 	"Previous 7 days": "Föregående 7 dagar",
@@ -341,7 +341,7 @@
 	"Prompt suggestions": "Förslag",
 	"Prompts": "Prompts",
 	"Pull \"{{searchValue}}\" from Ollama.com": "",
-	"Pull a model from Ollama.com": "Dra en modell från Ollama.com",
+	"Pull a model from Ollama.com": "Hämta en modell från Ollama.com",
 	"Pull Progress": "Dra framsteg",
 	"Query Params": "Frågeparametrar",
 	"RAG Template": "RAG-mall",
