Language Danish added to languesages.json

--- a/src/lib/i18n/locales/languages.json
+++ b/src/lib/i18n/locales/languages.json
@@ -27,6 +27,11 @@
 		"code": "de-DE",
 		"title": "Deutsch"
 	},
+	
+	{
+		"code": "da-DK",
+		"title": "Danish"
+	},
 	{
 		"code": "es-ES",
 		"title": "Spanish"
