Update languages.json - Addede Danish
I have addede danish to the languest.json

--- a/src/lib/i18n/locales/languages.json
+++ b/src/lib/i18n/locales/languages.json
@@ -31,6 +31,11 @@
 		"code": "de-DE",
 		"title": "German (Deutsch)"
 	},
+	
+	{
+		"code": "da-DK",
+		"title": "Denmark (Danish)"
+	},
 	{
 		"code": "es-ES",
 		"title": "Spanish (Español)"
