--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -12,17 +12,17 @@
 	"Accurate information": "",
 	"Add": "",
 	"Add a model": "Ajouter un modèle",
-	"Add a model tag name": "Ajouter un nom de tag pour le modèle",
+	"Add a model tag name": "Ajouter un libellé pour le modèle",
 	"Add a short description about what this modelfile does": "Ajouter une courte description de ce que fait ce fichier de modèle",
 	"Add a short title for this prompt": "Ajouter un court titre pour ce prompt",
-	"Add a tag": "Ajouter un tag",
+	"Add a tag": "Ajouter un libellé",
 	"Add custom prompt": "Ajouter un prompt personnalisé",
 	"Add Docs": "Ajouter des documents",
 	"Add Files": "Ajouter des fichiers",
 	"Add Memory": "Ajouter un souvenir",
 	"Add message": "Ajouter un message",
 	"Add Model": "Ajouter un modèle",
-	"Add Tags": "Ajouter des tags",
+	"Add Tags": "Ajouter des libellés",
 	"Add User": "Ajouter un utilisateur",
 	"Adjusting these settings will apply changes universally to all users.": "L'ajustement de ces paramètres appliquera les changements à tous les utilisateurs.",
 	"admin": "Administrateur",
@@ -181,7 +181,7 @@
 	"Enter LiteLLM API RPM (litellm_params.rpm)": "Entrez le RPM de l'API LiteLLM (litellm_params.rpm)",
 	"Enter LiteLLM Model (litellm_params.model)": "Entrez le modèle LiteLLM (litellm_params.model)",
 	"Enter Max Tokens (litellm_params.max_tokens)": "Entrez le nombre max de tokens (litellm_params.max_tokens)",
-	"Enter model tag (e.g. {{modelTag}})": "Entrez le tag du modèle (p. ex. {{modelTag}})",
+	"Enter model tag (e.g. {{modelTag}})": "Entrez le libellé du modèle (p. ex. {{modelTag}})",
 	"Enter Number of Steps (e.g. 50)": "Entrez le nombre d'étapes (p. ex. 50)",
 	"Enter Score": "Entrez le score",
 	"Enter stop sequence": "Entrez la séquence de fin",
@@ -234,7 +234,7 @@
 	"Include `--api` flag when running stable-diffusion-webui": "Inclure le drapeau `--api` lors de l'exécution de stable-diffusion-webui",
 	"Input commands": "Entrez les commandes d'entrée",
 	"Interface": "Interface",
-	"Invalid Tag": "Libellé Invalide",
+	"Invalid Tag": "Libellé invalide",
 	"January": "Janvier",
 	"join our Discord for help.": "rejoignez notre Discord pour obtenir de l'aide.",
 	"JSON": "JSON",
@@ -275,7 +275,7 @@
 	"Model filesystem path detected. Model shortname is required for update, cannot continue.": "",
 	"Model Name": "Nom du modèle",
 	"Model not selected": "Modèle non sélectionné",
-	"Model Tag Name": "Libellé du nom de modèle",
+	"Model Tag Name": "Libellé du modèle",
 	"Model Whitelisting": "Liste blanche de modèle",
 	"Model(s) Whitelisted": "Modèle(s) sur liste blanche",
 	"Modelfile": "Fichier de modèle",
@@ -285,7 +285,7 @@
 	"Models": "Modèles",
 	"More": "Plus",
 	"Name": "Nom",
-	"Name Tag": "Libellé de nom",
+	"Name Tag": "Libellé",
 	"Name your modelfile": "Nommez votre fichier de modèle",
 	"New Chat": "Nouvelle discussion",
 	"New Password": "Nouveau mot de passe",
@@ -428,7 +428,7 @@
 	"Sync All": "Synchroniser tout",
 	"System": "Système",
 	"System Prompt": "Invite système",
-	"Tags": "Tags",
+	"Tags": "Libellés",
 	"Tell us more:": "Dites-nous en plus",
 	"Temperature": "Température",
 	"Template": "Modèle",
