--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Default (Automatic1111)",
 	"Default (SentenceTransformers)": "",
 	"Default (Web API)": "Default (Web API)",
+	"Default Model": "",
 	"Default model updated": "Default model much updated",
 	"Default Prompt Suggestions": "Default Prompt Suggestions",
 	"Default User Role": "Default User Role",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "Activate Chat Story",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "Enable New Bark Ups",
 	"Enabled": "So Activated",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
