--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Oletus (AUTOMATIC1111)",
 	"Default (SentenceTransformers)": "Oletus (SentenceTransformers)",
 	"Default (Web API)": "Oletus (web-API)",
+	"Default Model": "",
 	"Default model updated": "Oletusmalli päivitetty",
 	"Default Prompt Suggestions": "Oletuskehotteiden ehdotukset",
 	"Default User Role": "Oletuskäyttäjärooli",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "Upotusmallin moottori",
 	"Embedding model set to \"{{embedding_model}}\"": "\"{{embedding_model}}\" valittu upotusmalliksi",
 	"Enable Chat History": "Ota keskusteluhistoria käyttöön",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "Salli uudet rekisteröitymiset",
 	"Enabled": "Käytössä",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Varmista, että CSV-tiedostossasi on 4 saraketta seuraavassa järjestyksessä: Nimi, Sähköposti, Salasana, Rooli.",
