--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Zadano (Automatic1111)",
 	"Default (SentenceTransformers)": "Zadano (SentenceTransformers)",
 	"Default (Web API)": "Zadano (Web API)",
+	"Default Model": "",
 	"Default model updated": "Zadani model ažuriran",
 	"Default Prompt Suggestions": "Zadani prijedlozi prompta",
 	"Default User Role": "Zadana korisnička uloga",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "Embedding model pogon",
 	"Embedding model set to \"{{embedding_model}}\"": "Embedding model postavljen na \"{{embedding_model}}\"",
 	"Enable Chat History": "Omogući povijest razgovora",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "Omogući nove prijave",
 	"Enabled": "Omogućeno",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Provjerite da vaša CSV datoteka uključuje 4 stupca u ovom redoslijedu: Name, Email, Password, Role.",
