--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "デフォルト (Automatic1111)",
 	"Default (SentenceTransformers)": "デフォルト (SentenceTransformers)",
 	"Default (Web API)": "デフォルト (Web API)",
+	"Default Model": "",
 	"Default model updated": "デフォルトモデルが更新されました",
 	"Default Prompt Suggestions": "デフォルトのプロンプトの提案",
 	"Default User Role": "デフォルトのユーザー役割",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "埋め込みモデルエンジン",
 	"Embedding model set to \"{{embedding_model}}\"": "埋め込みモデルを\"{{embedding_model}}\"に設定しました",
 	"Enable Chat History": "チャット履歴を有効化",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "新規登録を有効化",
 	"Enabled": "有効",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSVファイルに4つの列が含まれていることを確認してください: Name, Email, Password, Role.",
