--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Подразумевано (Automatic1111)",
 	"Default (SentenceTransformers)": "Подразумевано (SentenceTransformers)",
 	"Default (Web API)": "Подразумевано (Web API)",
+	"Default Model": "",
 	"Default model updated": "Подразумевани модел ажуриран",
 	"Default Prompt Suggestions": "Подразумевани предлози упита",
 	"Default User Role": "Подразумевана улога корисника",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "Мотор модела уградње",
 	"Embedding model set to \"{{embedding_model}}\"": "Модел уградње подешен на \"{{embedding_model}}\"",
 	"Enable Chat History": "Омогући историју ћаскања",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "Омогући нове пријаве",
 	"Enabled": "Омогућено",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "Уверите се да ваша CSV датотека укључује 4 колоне у овом редоследу: Име, Е-пошта, Лозинка, Улога.",
