--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Varsayılan (Automatic1111)",
 	"Default (SentenceTransformers)": "Varsayılan (SentenceTransformers)",
 	"Default (Web API)": "Varsayılan (Web API)",
+	"Default Model": "",
 	"Default model updated": "Varsayılan model güncellendi",
 	"Default Prompt Suggestions": "Varsayılan Prompt Önerileri",
 	"Default User Role": "Varsayılan Kullanıcı Rolü",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "Gömme Modeli Motoru",
 	"Embedding model set to \"{{embedding_model}}\"": "Gömme modeli \"{{embedding_model}}\" olarak ayarlandı",
 	"Enable Chat History": "Sohbet Geçmişini Etkinleştir",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "Yeni Kayıtları Etkinleştir",
 	"Enabled": "Etkin",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "CSV dosyanızın şu sırayla 4 sütun içerdiğinden emin olun: İsim, E-posta, Şifre, Rol.",
