--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "默认（Automatic1111）",
 	"Default (SentenceTransformers)": "默认（SentenceTransformers）",
 	"Default (Web API)": "默认（Web API）",
+	"Default Model": "",
 	"Default model updated": "默认模型已更新",
 	"Default Prompt Suggestions": "默认提示词建议",
 	"Default User Role": "默认用户角色",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "嵌入模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "嵌入模型设置为 \"{{embedding_model}}\"",
 	"Enable Chat History": "启用聊天历史",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "启用新注册",
 	"Enabled": "启用",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "确保您的 CSV 文件按以下顺序包含 4 列： 姓名、电子邮件、密码、角色。",
