--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "預設（Automatic1111）",
 	"Default (SentenceTransformers)": "預設（SentenceTransformers）",
 	"Default (Web API)": "預設（Web API）",
+	"Default Model": "",
 	"Default model updated": "預設模型已更新",
 	"Default Prompt Suggestions": "預設提示詞建議",
 	"Default User Role": "預設用戶 Role",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "嵌入模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "嵌入模型已設定為 \"{{embedding_model}}\"",
 	"Enable Chat History": "啟用聊天歷史",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "允許註冊新帳號",
 	"Enabled": "已啟用",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "請確保你的 CSV 檔案包含這四個欄位，並按照此順序：名稱、電子郵件、密碼、角色。",
