--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "Default (Awtomatiko1111)",
 	"Default (SentenceTransformers)": "",
 	"Default (Web API)": "Default (Web API)",
+	"Default Model": "",
 	"Default model updated": "Gi-update nga default template",
 	"Default Prompt Suggestions": "Default nga prompt nga mga sugyot",
 	"Default User Role": "Default nga Papel sa Gumagamit",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "I-enable ang kasaysayan sa chat",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "I-enable ang bag-ong mga rehistro",
 	"Enabled": "Gipaandar",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
