--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "",
 	"Default (SentenceTransformers)": "",
 	"Default (Web API)": "",
+	"Default Model": "",
 	"Default model updated": "",
 	"Default Prompt Suggestions": "",
 	"Default User Role": "",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "",
 	"Embedding model set to \"{{embedding_model}}\"": "",
 	"Enable Chat History": "",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "",
 	"Enabled": "",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "",
