--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -127,6 +127,7 @@
 	"Default (Automatic1111)": "ברירת מחדל (Automatic1111)",
 	"Default (SentenceTransformers)": "ברירת מחדל (SentenceTransformers)",
 	"Default (Web API)": "ברירת מחדל (Web API)",
+	"Default Model": "",
 	"Default model updated": "המודל המוגדר כברירת מחדל עודכן",
 	"Default Prompt Suggestions": "הצעות ברירת מחדל לפקודות",
 	"Default User Role": "תפקיד משתמש ברירת מחדל",
@@ -168,6 +169,8 @@
 	"Embedding Model Engine": "מנוע מודל הטמעה",
 	"Embedding model set to \"{{embedding_model}}\"": "מודל ההטמעה הוגדר ל-\"{{embedding_model}}\"",
 	"Enable Chat History": "הפעל היסטוריית צ'אט",
+	"Enable Community Sharing": "",
+	"Enable Message Rating": "",
 	"Enable New Sign Ups": "אפשר הרשמות חדשות",
 	"Enabled": "מופעל",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "ודא שקובץ ה-CSV שלך כולל 4 עמודות בסדר הבא: שם, דוא\"ל, סיסמה, תפקיד.",
