--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -505,17 +505,38 @@
 	"chat": "Hội thoại thông thường",
 	"chat_law": "Hội thoại Luật Pháp",
 	"chat_buddhism": "Hội thoại Phật Pháp",
-	"summary": "Tóm tắt đơn giản",
+	"chat_embedding": "Q&A với kho văn bản",
+	"summary": "Tóm tắt",
 	"summary_emphasis": "Tóm tắt có điểm nhấn",
 	"faq": "Tạo FAQ",
 	"faq_simple_analysis": "Phân tích đơn giản",
-	"faq_case_1": "Hỏi đáp về vụ án kiểu 1",
-	"faq_case_2": "Hỏi đáp về vụ án kiểu 2",
+	"negative_conversation": "Tạo hội thoại Tiêu cực",
+	"positive_conversation": "Tạo hội thoại Tích cực",
+	"intelligent_conversation": "Hội thoại thông minh",
+	"faq_case_1": "Hội thoại bản án I",
+	"faq_case_2": "Hội thoại bản án II",
+	"faq_case_3": "Hội thoại bản án III",
 	"faq_create_example": "Tạo đề thi",
 	"faq_create_verdict_scenario": "Tạo kịch bản bản án",
+	"long_summary": "Tóm tắt (dài)",
+	"long_summary_emphasis": "Tóm tắt điểm nhấn (dài)",
+	"long_faq": "Tạo FAQ (dài)",
+	"long_faq_simple_analysis": "Phân tích gọn (dài)",
+	"long_negative_conversation": "Tạo hội thoại Tiêu cực (dài)",
+	"long_positive_conversation": "Tạo hội thoại Tích cực (dài)",
+	"long_intelligent_conversation": "Hội thoại thông minh (dài)",
+	"long_faq_case_1": "Hội thoại bản án I (dài)",
+	"long_faq_case_2": "Hội thoại bản án II (dài)",
+	"long_faq_case_3": "Hội thoại bản án III (dài)",
+	"long_faq_create_example": "Tạo đề thi (dài)",
+	"long_faq_create_verdict_scenario": "Tạo kịch bản bản án (dài)",
 	"translate": "Dịch",
 	"translate_coding": "Dịch có coding",
 	"translate_ancient": "Dịch cổ văn",
-	"Embedding query": "Truy vấn embedding",
-	"chat_embedding": "Truy vấn với embedding"
+	"Create new embedding index": "Tạo dữ liệu chỉ mục mới",
+	"Embedding": "Kho văn bản",
+	"Embedding name": "Tên chỉ mục",
+	"Create new index": "Tạo chỉ mục mới",
+	"Embedding Index": "Dữ liệu chỉ mục",
+	"Embedded Documents": "Văn bản đã đánh chỉ mục"
 }
