little tweaks on the Spanish translation

--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -101,7 +101,7 @@
 	"Context Length": "Longitud del contexto",
 	"Continue Response": "Continúa la respuesta",
 	"Conversation Mode": "Modo de Conversación",
-	"Copied shared chat URL to clipboard!": "Copia la URL compartida del chat al portapapeles",
+	"Copied shared chat URL to clipboard!": "¡Copié la URL compartida del chat al portapapeles!",
 	"Copy": "Copiar",
 	"Copy last code block": "Copia el último bloque de código",
 	"Copy last response": "Copia la última respuesta",
@@ -205,7 +205,7 @@
 	"File Mode": "Modo de archivo",
 	"File not found.": "Archivo no encontrado.",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "Se detectó suplantación de huellas: No se pueden usar las iniciales como avatar. Por defecto se utiliza la imagen de perfil predeterminada.",
-	"Fluidly stream large external response chunks": "Transmita con fluidez grandes fragmentos de respuesta externa",
+	"Fluidly stream large external response chunks": "Transmite con fluidez grandes fragmentos de respuesta externa",
 	"Focus chat input": "Enfoca la entrada del chat",
 	"Followed instructions perfectly": "Siguió las instrucciones perfectamente",
 	"Format your variables using square brackets like this:": "Formatea tus variables usando corchetes de la siguiente manera:",
