--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -375,8 +375,8 @@
 	"Reset Vector Storage": "重置向量存储",
 	"Response AutoCopy to Clipboard": "自动复制回答到剪贴板",
 	"Role": "角色",
-	"Rosé Pine": "Rosé Pine",
-	"Rosé Pine Dawn": "Rosé Pine Dawn",
+	"Rosé Pine": "玫瑰紫",
+	"Rosé Pine Dawn": "玫瑰粉",
 	"RTL": "RTL",
 	"Save": "保存",
 	"Save & Create": "保存并创建",
